--- a/couple.html
+++ b/couple.html
@@ -17,6 +17,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" integrity="sha512-+EoPw+Fiwh6eSeRK7zwIKG2MA8i3rV/DGa3tdttQGgWyatG/SkncT53KHQaS5Jh9MNOT3dmFL0FjTY08And/Cw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
+  <body>
       <header>
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <a class="navbar-brand" href="index2.html">Wedding Pictures</a>
@@ -43,41 +44,60 @@
                 <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search">
                     <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
-                </form> 
+                </form> -
             </div>
         </nav>
-    </header>
-
-    <!-- About Start-->
+      </header>
     <section>
-        <div class="container">
-            <h1 class="text-center font-weight-bold text-white pt-3">About Us</h1>
+        <div class="container-fluid mb-5 mt-3 text-white">
+            <h1 class="text-center font-weight-bold">Couple</h1>
             <hr class="w-25 mx-auto">
-
-            
-
-            <div class="row mb-5">
-                <div class="col-lg-6 col-md-6 col-12">
-                   <img src="images/Mahin2.JPG" class="img-fluid saya" alt="" width="500" height="250">
-                  </div>
-                   <div class="col-lg-6 col-md-6 col-12">
-                    <div class="jumbotron jumbotron-fluid" style="background-color: orange">
-                        <div class="container">
-                          <h1>I am Mahin Rashid</h1>
-                          <p>Ami bedna bala faina, simple.</p>
-                        </div>
-                      </div>
-                     <button class="btn btn-outline-dark">Follow Me on Facebook</button>
-                  </div>
+            <div class="row">
+              <div class="col-lg-4 col-md-4 col-12 bedna">
+                <a href="images/Couple/_AAT2490.JPG"><img src="images/Couple/_AAT2490.JPG" class="img-fluid rounded mb-5" alt="">
+              </div></a>
+              <div class="col-lg-4 col-md-4 col-12">
+                  <div class="row bedna">
+                      <a href="images/Couple/_AAT2524.JPG"><img src="images/Couple/_AAT2524.JPG" class="img-fluid rounded mb-3 mt-3" alt="">
+                    </div></a>
+                <div class="row bedna">
+                    <a href="images/Couple/WHR08994.JPG"><img src="images/Couple/WHR08994.JPG" class="img-fluid rounded mb-5" alt="">
+                </div></a>
+              </div>
+              <div class="col-lg-4 col-md-4 col-12 bedna">
+                <a href="images/Couple/WH_02440.JPG"><img src="images/Couple/WH_02440.JPG" class="img-fluid rounded mb-5" alt="">
+              </div></a>
+              <div class="col-lg-4 col-md-4 col-12 bedna">
+                <a href="images/Couple/WH_02487.JPG"><img src="images/Couple/WH_02487.JPG" class="img-fluid rounded mb-5" alt="">
+              </div></a>
+              <div class="col-lg-4 col-md-4 col-12 bedna">
+                <a href="images/Couple/WHR08834.JPG"><img src="images/Couple/WHR08834.JPG" class="img-fluid rounded mb-5" alt="">
+              </div></a>
+              <div class="col-lg-4 col-md-4 col-12 bedna">
+                <a href="images/Couple/WHR08844.JPG"><img src="images/Couple/WHR08844.JPG" class="img-fluid rounded mb-5" alt="">
+              </div></a>
+              <div class="col-lg-4 col-md-4 col-12 bedna">
+                <a href="images/Couple/WHR08945.JPG"><img src="images/Couple/WHR08945.JPG" class="img-fluid rounded mb-5" alt="">
+              </div></a>
+              <div class="col-lg-4 col-md-4 col-12 bedna">
+                <a href="images/Couple/WHR08946.JPG"><img src="images/Couple/WHR08946.JPG" class="img-fluid rounded mb-5" alt="">
+              </div></a>
+              <div class="col-lg-4 col-md-4 col-12 bedna">
+                <a href="images/Couple/WHR08964.JPG"><img src="images/Couple/WHR08964.JPG" class="img-fluid rounded mb-5" alt="">
+              </div></a>
+              <div class="col-lg-4 col-md-4 col-12 bedna">
+                <a href="images/Couple/WHR08985.JPG"><img src="images/Couple/WHR08985.JPG" class="img-fluid rounded mb-5" alt="">
+              </div></a>
+              <div class="col-lg-8 col-md-8 col-12 bedna">
+                <a href="images/Couple/WH_02456.JPG"><img src="images/Couple/WH_02456.JPG" class="img-fluid rounded mb-5 mt-4" alt="">
+              </div></a>
             </div>
         </div>
-        </section>
-              <!-- End of About -->
-              <!-- Footer Us-->
-           <footer class="bg-warning">
-            <p class="text-center">Designed by Mahin Rashid</p>
-        </footer>
-    
+    </section>  
+    <!-- Footer Us-->
+    <footer class="bg-primary text-white">
+        <p class="text-center">Designed by Mahin Rashid</p>
+    </footer>
   <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
